--- a/index.html
+++ b/index.html
@@ -1,7 +1,11 @@
 <html>
 <head>
+<title>Выравнивание текста в HTML, текст по центру, справа страницы</title>
 </head>
 <body>
-пизда
+<p align="left">Текст выровнен по левому краю страницы.</p>
+<p align="right">Текст справа страницы.</p>
+<p align="center" style="color:#ff0099; font-size:30px">
+Текст выровнен по центру, розового цвета, размером в 30 пикселей.</p>
 </body>
-</html>
+</html> 
