--- a/index.html
+++ b/index.html
@@ -18,7 +18,17 @@
             moz-do-not-send="true" src="text2.png" alt="" border="0"
             height="82" width="230"></a><br>
         <a moz-do-not-send="true" href="about.html">обо мне</a><br>
-        <font color="#330033" face="Inter"> </font></div>
+        <br>
+        <br>
+                <br>
+        <br>
+                <br>
+        <br>
+                <br>
+        <br>
+                <br>
+        <br>
+        САЙТ ВРЕМЕННЫЙ
     </div>
   </body>
 </html>
