--- a/projects.html
+++ b/projects.html
@@ -24,9 +24,9 @@
 
 
         и установщик для игры Insomnia</a></h1>
-    <p align="center">Линус - python<br>
-      Лаунчер - PHP и java<br>
-      Установщик - C<br>
+        <h1 align="center"><a moz-do-not-send="true"
+        href="https://gitlab.com/ZzEdovec/insomnia/-/raw/main/ZeScreenshotSetup.exe">Программа для скриншотов экрана</a>(НОВОЕ!)</h1>
+    <p align="center"><br>
       Здесь представлены только развиваемые и/или активные проекты (с
       рабочими серверами). Всего было проектов - 5<br>
     </p>
