--- a/index.html
+++ b/index.html
@@ -1,33 +1,19 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
+    <link rel="icon" href="Без имени-1.ico" type="image/x-icon">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>ZzEdovec</title>
+    <title>ПО ZzEdovec</title>
   </head>
-  <body background="back.png">
-    <div align="center"><br>
-      <br>
-      <br>
-      <div align="center">&nbsp; <img moz-do-not-send="true"
-          src="text3.png" alt="" height="379" width="539"><br>
-      </div>
-      <br>
-      <div align="center"><a href="media.html"><img
-            moz-do-not-send="true" src="text.png" alt="" border="0"
-            height="82" width="230"></a><a href="projects.html"><img
-            moz-do-not-send="true" src="text2.png" alt="" border="0"
-            height="82" width="230"></a><br>
-        <br>
-        <br>
-                <br>
-        <br>
-                <br>
-        <br>
-                <br>
-        <br>
-                <br>
-        <br>
-        САЙТ ВРЕМЕННЫЙ
-    </div>
+  <body color="black" link="#0000EE" vlink="#551A8B" text="#000000"
+    bgcolor="#330033" alink="#EE0000">
+    <h1 align="center"> <font face="MS Gothic"><font color="#c0c0c0">Программное
+
+          обеспечение, разработанное ZzEdovec</font> </font></h1>
+    <div align="center"><a
+href="https://gitlab.com/ZzEdovec/insomnia/-/raw/main/ZeScreenshotSetup.exe"><img
+          src="downloadbutton.png" title="Скачать ZeScreenshot для
+          Windows" moz-do-not-send="true" alt="" width="389" border="0"
+          height="93"></a></div>
   </body>
 </html>
