--- a/index.html
+++ b/index.html
@@ -15,5 +15,7 @@ href="https://gitlab.com/ZzEdovec/insomnia/-/raw/main/ZeScreenshotSetup.exe"><im
           src="downloadbutton.png" title="Скачать ZeScreenshot для
           Windows" moz-do-not-send="true" alt="" width="389" border="0"
           height="93"></a></div>
+    <br>
+    <a href="privacypolicy.html" align="center">Политика конфиденциальности</a>
   </body>
 </html>
