--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <link rel="icon" href="Без имени-1.ico" type="image/x-icon">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>ПО ZzEdovec</title>
+    <title>ZzEdovec</title>
   </head>
   <body color="black" link="#0000EE" vlink="#551A8B" text="#000000"
     bgcolor="#330033" alink="#EE0000">
