--- a/index.html
+++ b/index.html
@@ -16,6 +16,6 @@ href="https://gitlab.com/ZzEdovec/insomnia/-/raw/main/ZeScreenshotSetup.exe"><im
           Windows" moz-do-not-send="true" alt="" width="389" border="0"
           height="93"></a></div>
     <br>
-    <div align="center"><a href="privacypolicy.html">"Политика конфиденциальности</a></div>
+    <div align="center"><a href="privacypolicy.html">Политика конфиденциальности</a></div>
   </body>
 </html>
