--- a/privacypolicy.html
+++ b/privacypolicy.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
-
+<link rel="icon" href="Без имени-1.ico" type="image/x-icon">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>Конфиденциальность</title>
   </head>
   <body link="#0000EE" vlink="#551A8B" text="#000000" bgcolor="#330033"
     alink="#EE0000">
-    <div align="center"><font color="#999999">ZeScreenshot уважает вашу
+    <div align="center"><font face="Segoe UI" color="#999999">ZeScreenshot уважает вашу
         конфиденциальность. Он не обрабатывает и не хранит ваши
         скриншоты нигде более вашей локальной машины.<br>
         <br>
