--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ href="https://gitlab.com/ZzEdovec/insomnia/-/raw/main/ZeScreenshotSetup.exe"><im
           border="0"></a><br>
       <a href="https://zzedovec.github.io/privacypolicy.html">Политика
         конфиденциальности ZeScreenshot</a><br>
-      <a href="zenetwork.html"><img moz-do-not-send="true"
+      <a href="zenetwork"><img moz-do-not-send="true"
 src="zenetworkbutton.png"
           alt="ZeNetwork соединяет" width="389" height="93" border="0"></a><br>
     </div>
