--- a/zenetwork.html
+++ b/zenetwork.html
@@ -20,7 +20,7 @@ src="zenetworklogo.png"
               ZeNetwork. Он соединяет все сервисы ZeD Team, Voshod
               Development и ZzEdovec в одну сеть, которая в перспективе
               должна стать экосистемой.<br>
-              На данный момент ZeNetwork находится лишь на степени
+              На данный момент ZeNetwork находится лишь на стадии
               разработки и тестирования,<br>
               но мы уже можем сообщить о том, какие возможности он будет
               представлять:<br>
