--- a/ZeAnalytics.html
+++ b/ZeAnalytics.html
@@ -1,13 +1,13 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
-
+  <link rel="icon" href="Без имени-1.ico" type="image/x-icon">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>ZeAnalytics</title>
   </head>
   <body text="#000000" vlink="#551A8B" link="#0000EE" alink="#EE0000"
     bgcolor="#330033">
-    <img moz-do-not-send="true" src="backbutton.png" alt="На главную"><br>
+    <a href="https://zzedovec.github.io"><img moz-do-not-send="true" src="backbutton.png" alt="На главную"></a><br>
     <h1 align="center"><font face="VK Sans Display" color="#cccccc">ZeAnalytics</font></h1>
     <div align="center"><font size="+2" color="#cccccc"><font face="VK
           Sans Display">ZeAnalytics - проект аналитики с закрытым
