--- a/ZeAnalytics.html
+++ b/ZeAnalytics.html
@@ -8,7 +8,7 @@
   <body text="#000000" vlink="#551A8B" link="#0000EE" alink="#EE0000"
     bgcolor="#330033">
     <a href="https://zzedovec.github.io"><img moz-do-not-send="true" src="backbutton.png" alt="На главную"></a><br>
-    <h1 align="center"><font face="VK Sans Display" color="#cccccc">ZeAnalytics</font></h1>
+    <h1 align="center"><font face="VK Sans Display" color="#cccccc">ZeAnalytics от ZzEdovec</font></h1>
     <div align="center"><font size="+2" color="#cccccc"><font face="VK
           Sans Display">ZeAnalytics - проект аналитики с закрытым
           исходным кодом, созданный для определения количества
