--- a/media.html
+++ b/media.html
@@ -19,8 +19,7 @@
       <br>
       <br>
       <br>
-      <a href="https://vk.com/zzedovec"><img moz-do-not-send="true"
-          src="vk.png" alt="" border="0" height="94" width="538"></a><br>
+      <h1>Ссылка на страницу ВКонтакте убрана с этой страницы по некоторым причинам. Вы можете найти страницу во ВКонтакте по поиску ZzEdovec</h1>
       <br>
       <h1><a moz-do-not-send="true" href="https://vseti.co/zzedovec">ВСЕТИ</a></h1>
       <h1><a moz-do-not-send="true"
