--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ href="https://gitlab.com/ZzEdovec/insomnia/-/raw/main/ZeScreenshotSetup.exe"><im
           src="zenetworkbutton.png" alt="ZeNetwork соединяет"
           width="389" height="93" border="0"></a><br>
       <a href="ZeAnalytics"><img moz-do-not-send="true"
-          src="ZeAnalytics/analyticsbuttonpng.png" alt="" width="389"
+          src="analyticsbuttonpng.png" alt="" width="389"
           height="93" border="0"></a><br>
       <a href="donate.txt"><img moz-do-not-send="true"
 src="viewcredits.png"
