--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 src="ZeD Team and ZzEdovec without back.png"
         alt="" width="400" height="400"></div>
     <div align="center"><a
-href="https://gitlab.com/ZzEdovec/insomnia/-/raw/main/ZeScreenshotSetup.exe"><img
+href="https://zzedovec.github.io/ZeScreenshot"><img
           src="downloadbutton.png" title="Скачать ZeScreenshot для
           Windows" moz-do-not-send="true" alt="" width="389" height="93"
           border="0"></a><br>
