--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ href="https://zzedovec.github.io/ZeScreenshot"><img
           src="downloadbutton.png" title="Скачать ZeScreenshot для
           Windows" moz-do-not-send="true" alt="" width="389" height="93"
           border="0"></a><br>
-      <a href="ZeD-Weather"><img moz-do-not-send="true"
+      <a href="ZeDWeather"><img moz-do-not-send="true"
 src="weatherbutton.png"
                            
           alt="" width="389" height="93" border="0"></a><br>
