--- a/howtoonlinux.html
+++ b/howtoonlinux.html
@@ -9,7 +9,7 @@
     link="#0000EE">
     <div align="center">
       <h1 align="left"><font color="#ffffff" face="Noto Sans"><a
-            href="https://zzedovec.github.ior"><img
+            href="https://zzedovec.github.io"><img
               moz-do-not-send="true"
 src="backbutton.png"
               title="Вернуться на главную страницу ZzEdovec"
