--- a/index.html
+++ b/index.html
@@ -11,9 +11,8 @@
 src="ZeD Team and ZzEdovec without back.png"
         alt="" width="400" height="400"></div>
     <div align="center"><a
-href="https://zzedovec.github.io/ZeScreenshot"><img
-          src="downloadbutton.png" title="Скачать ZeScreenshot для
-          Windows" moz-do-not-send="true" alt="" width="389" height="93"
+href="https://zzedovec.github.io/ZeDShot"><img
+          src="downloadbutton.png" title="Скачать ZeDShot" moz-do-not-send="true" alt="" width="389" height="93"
           border="0"></a><br>
       <a href="ZeDWeather"><img moz-do-not-send="true"
 src="weatherbutton.png"
