--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ src="weatherbutton.png"
       <a href="ZeAnalytics"><img moz-do-not-send="true"
           src="analyticsbuttonpng.png" alt="" width="389"
           height="93" border="0"></a><br>
-      <a href="donate.txt"><img moz-do-not-send="true"
+      <a href="https://www.donationalerts.com/r/zed_team"><img moz-do-not-send="true"
 src="viewcredits.png"
           alt="" width="389" height="93" border="0"></a><br>
       <a href="projects"><img moz-do-not-send="true"
