--- a/media.html
+++ b/media.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
+    <link type="image/png" sizes="16x16" rel="icon" href="icons/mediaicon.png">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>ZzEdovec - связаться</title>
   </head>
@@ -9,12 +10,12 @@
     <div align="center">
       <div align="left"><a href="https://zzedovec.github.io"><img
             moz-do-not-send="true"
-src="file:///C:/Users/zzedo/Desktop/ZeDShot/website/images/backtomain.png"
+src="backtomain.png"
             alt="Вернуться на главную страницу" width="200" border="0"
             height="50"></a></div>
       <h1><font color="#ffffff" face="Arial">Связаться с ZzEdovec</font></h1>
       <a href="https://vk.me/zzedovec"><img moz-do-not-send="true"
-          src="file:///C:/Users/zzedo/Desktop/ZeDShot/website/images/vkbutton.png"
+          src="vkbutton.png"
           alt="Страница ZzEdovec во ВКонтакте" width="300" border="0"
           height="100"></a><br>
       <br>
