--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
-    <link type="image/png" sizes="16x16" rel="icon" href="icons/mainpage.png">
+    <link type="image/png" sizes="16x16" rel="icon"
+      href="icons/mainpage.png">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>ZzEdovec - главная</title>
   </head>
@@ -10,11 +11,6 @@
     <h1 align="center"><font color="#ffffff" face="Arial">Вы на главной
         странице сайта ZzEdovec</font><br>
     </h1>
-    <h2 align="center"><font color="#cccccc" face="Arial"><a
-          href="https://www.donationalerts.com/r/zed_team"><img
-            moz-do-not-send="true" src="images/donatebutton.png" alt=""
-            width="300" border="0" height="100"></a><br>
-      </font></h2>
     <h2 align="center"><font color="#cccccc" face="Arial">Проекты
         ZzEdoveс</font></h2>
     <div align="center"><a href="https://zzedovec.github.io/ZeDShot"><img
@@ -37,10 +33,18 @@
           moz-do-not-send="true" src="images/oldprojectsbutton.png"
           alt="Устаревшая страница проектов" width="300" border="0"
           height="100"></a><br>
+      <h2 align="center"><font color="#cccccc" face="Arial">Поддержите
+          разработку проектов<br>
+        </font></h2>
+      <h2 align="center"><font color="#cccccc" face="Arial"><a
+            href="https://www.donationalerts.com/r/zed_team"><img
+              moz-do-not-send="true"
+src="file:///C:/Users/zzedo/Desktop/ZeDShot/website/images/donatebutton.png"
+              alt="" width="300" border="0" height="100"></a></font></h2>
       <br>
-      <font color="#ffffff" face="Arial">*Проекты, кнопки которых обведены еле
-        заметной бежевой рамкой можно скачать на компьютеры под
-        управлением ОС Windows</font><br>
+      <font color="#ffffff" face="Arial">*Проекты, кнопки которых
+        обведены еле заметной бежевой рамкой можно скачать на компьютеры
+        под управлением ОС Windows</font><br>
       <br>
       <br>
     </div>
