--- a/media.html
+++ b/media.html
@@ -10,12 +10,12 @@
     <div align="center">
       <div align="left"><a href="https://zzedovec.github.io"><img
             moz-do-not-send="true"
-src="backtomain.png"
+src="images/backtomain.png"
             alt="Вернуться на главную страницу" width="200" border="0"
             height="50"></a></div>
       <h1><font color="#ffffff" face="Arial">Связаться с ZzEdovec</font></h1>
       <a href="https://vk.me/zzedovec"><img moz-do-not-send="true"
-          src="vkbutton.png"
+          src="images/vkbutton.png"
           alt="Страница ZzEdovec во ВКонтакте" width="300" border="0"
           height="100"></a><br>
       <br>
