--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <h2 align="center"><font color="#cccccc" face="Arial"><a
             href="https://www.donationalerts.com/r/zed_team"><img
               moz-do-not-send="true"
-src="file:///C:/Users/zzedo/Desktop/ZeDShot/website/images/donatebutton.png"
+src="images/donatebutton.png"
               alt="" width="300" border="0" height="100"></a></font></h2>
       <br>
       <font color="#ffffff" face="Arial">*Проекты, кнопки которых
