--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           moz-do-not-send="true" width="300" border="0" height="100"></a><br>
     </div>
     <h2 align="center"><font color="#cccccc" face="Arial">Связаться</font></h2>
-    <div align="center"><a href="https://zzedovec.github.io/media"><img
+    <div align="center"><a href="https://zzedovec.github.io/pages/media"><img
           moz-do-not-send="true" src="images/oldsocialmedia.png"
           alt="Социальные сети ZzEdovec" width="300" border="0"
           height="100"></a></div>
