--- a/pages/media.html
+++ b/pages/media.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
-    <link type="image/png" sizes="16x16" rel="icon" href="icons/mediaicon.png">
+    <link type="image/png" sizes="16x16" rel="icon" href="https://zzedovec.github.io/icons/mediaicon.png">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>ZzEdovec - связаться</title>
   </head>
