--- a/pages/ZeDShot.html
+++ b/pages/ZeDShot.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
   <head>
-    <link rel="icon" href="ze.ico" type="image/x-icon">
+    <link rel="icon" href="https://zzedovec.github.io/icons/ze.ico" type="image/x-icon">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <title>ZeD Shot - создавайте скриншоты. Легко.</title>
   </head>
