--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     </h1>
     <h2 align="center"><font color="#cccccc" face="Arial">Проекты
         ZzEdoveс</font></h2>
-    <div align="center"><a href="https://zzedovec.github.io/ZeDShot"><img
+    <div align="center"><a href="https://zzedovec.github.io/pages/ZeDShot"><img
           moz-do-not-send="true" src="images/zedshotbutton.png"
           alt="Программа для скриншотов ZeD Shot" width="300" border="0"
           height="100"></a><br>
