--- a/pages/ZeDShot.html
+++ b/pages/ZeDShot.html
@@ -22,7 +22,7 @@
           </font>
           <h2><font size="+2" color="#cccccc" face="Arial">Скачайте
               последнюю версию ZeD Shot, нажав на кнопку ниже</font></h2>
-          <a href="https://gitlab.com/ZzEdovec/insomnia/-/raw/main/zedshotinstall.exe"><img
+          <a href="https://www.dropbox.com/s/zhcg2eo8pvlp7y7/zedshotinstall.exe?dl=1"><img
               moz-do-not-send="true"
               src="https://zzedovec.github.io/images/downloadbutton.png"
               alt="Скачать ZeD Shot" width="300" border="0" height="100"></a><br>
