--- a/index.html
+++ b/index.html
@@ -11,44 +11,6 @@
     <h1 align="center"><font color="#ffffff" face="Arial">Вы на главной
         странице сайта ZzEdovec</font><br>
     </h1>
-    <h2 align="center"><font color="#cccccc" face="Arial">Проекты
-        ZzEdoveс</font></h2>
-    <div align="center"><a href="https://zzedovec.github.io/pages/ZeDShot"><img
-          moz-do-not-send="true" src="images/zedshotbutton.png"
-          alt="Программа для скриншотов ZeD Shot" width="300" border="0"
-          height="100"></a><br>
-      <br>
-      <a href="https://zzedovec.github.io/ZeAnalytics"><img alt="Система
-          аналитики ZeAnalytics" src="images/zeanalyticsbutton.png"
-          moz-do-not-send="true" width="300" border="0" height="100"></a><br>
-    </div>
-    <h2 align="center"><font color="#cccccc" face="Arial">Связаться</font></h2>
-    <div align="center"><a href="https://zzedovec.github.io/pages/media"><img
-          moz-do-not-send="true" src="images/oldsocialmedia.png"
-          alt="Социальные сети ZzEdovec" width="300" border="0"
-          height="100"></a></div>
-    <h2 align="center"><font color="#cccccc" face="Arial">Устаревшие
-        страницы</font></h2>
-    <div align="center"><a href="https://zzedovec.github.io/projects"><img
-          moz-do-not-send="true" src="images/oldprojectsbutton.png"
-          alt="Устаревшая страница проектов" width="300" border="0"
-          height="100"></a><br>
-      <h2 align="center"><font color="#cccccc" face="Arial">Поддержите
-          разработку проектов<br>
-        </font></h2>
-      <h2 align="center"><font color="#cccccc" face="Arial"><a
-            href="https://www.donationalerts.com/r/zed_team"><img
-              moz-do-not-send="true"
-src="images/donatebutton.png"
-              alt="" width="300" border="0" height="100"></a></font></h2>
-      <br>
-      <font color="#ffffff" face="Arial">*Проекты, кнопки которых
-        обведены еле заметной бежевой рамкой можно скачать на компьютеры
-        под управлением ОС Windows</font><br>
-      <br>
-      <br>
-    </div>
-    <div align="center"><br>
-    </div>
+    <h2 align="center"><font color="#ffffff" face="Arial">Скоро здесь станет лучше. <a href="https://zzedovec.github.io/pages/ZeDShot">ZeD Shot</a></h2></font><button>
   </body>
 </html>
