--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
       document.getElementById("button3").onclick = function () {
         location.href = "https://zzedovec.github.io/ZeAnalytics";}
         document.getElementById("button4").onclick = function () {
-        location.href = "https://zzedovec.github.io/ZeAnalytics";}
+        location.href = "https://github.com/ZzEdovec/zzedovec.github.io";}
     </script>
   </body>
 </html>
