--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         location.href = "https://zzedovec.github.io/ZeAnalytics";}
 
       document.getElementById("button3").onclick = function () {
-        location.href = "https://zzedovec.github.io/ZeAnalytics";}
+        location.href = "https://zzedovec.github.io/pages/media";}
         document.getElementById("button4").onclick = function () {
         location.href = "https://github.com/ZzEdovec/zzedovec.github.io";}
     </script>
