--- a/pages/zedshotisnotasimplescreenshoter.html
+++ b/pages/zedshotisnotasimplescreenshoter.html
@@ -4,8 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <link rel="icon" href="https://zzedovec.github.io/icons/ze.ico" type="image/x-icon">
     <title>ZeD Shot - больше, чем простой скриншотер</title>
-    <link rel="stylesheet" type="text/css"
-      href="https://zzedovec.github.io/css/dark.css">
+    <link rel="stylesheet" type="text/css" href="https://zzedovec.github.io/css/dark.css">
   </head>
   <body link="#0000EE" vlink="#551A8B" text="#000000" bgcolor="#333333"
     alink="#EE0000">
