--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
       <button type="button" class="button" id="button2">ZeAnalytics</button>
       <button type="button" class="button" id="button3">Медиа</button>
       <button type="button" class="button" id="button4">Репозиторий сайта на GitHub</button>
-    </div><br>
-    <h3 align="center" class="header2"><font face="Arial">Предупреждение: Все страницы кроме этой<br>ещё не обновлены и не поддерживают переключение тем,<br>а также выполнены в старом дизайне.<br>Эта страница также ещё может дополняться.</font></h3>
+    </div>
     <script>
       var currenttheme = localStorage.getItem('Theme');
       if (currenttheme == 'Light')
