--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <div align="center">
       <button type="button" class="button" id="button1">ZeD Shot </button>
       <button type="button" class="button" id="button2">ZeAnalytics</button>
-      <button type="button" class="button" id="button3">Медиа</button>
-      <button type="button" class="button" id="button4">Репозиторий сайта на GitHub</button>
+      <button type="button" class="button" id="button3">ZeD Weather</button>
+      <button type="button" class="button" id="button4">Медиа</button>
+      <button type="button" class="button" id="button5">Репозиторий сайта на GitHub</button>
     </div>
     <script>
       var currenttheme = localStorage.getItem('Theme');
@@ -58,10 +59,11 @@
 
       document.getElementById("button2").onclick = function () {
         location.href = "https://zzedovec.github.io/ZeAnalytics";}
-
       document.getElementById("button3").onclick = function () {
-        location.href = "https://zzedovec.github.io/pages/media";}
+        location.href = "https://zzedovec.github.io/pages/zedweather";}
       document.getElementById("button4").onclick = function () {
+        location.href = "https://zzedovec.github.io/pages/media";}
+      document.getElementById("button5").onclick = function () {
         location.href = "https://github.com/ZzEdovec/zzedovec.github.io";}
     </script>
   </body>
