--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       document.getElementById("button2").onclick = function () {
         location.href = "https://zzedovec.github.io/ZeAnalytics";}
       document.getElementById("button3").onclick = function () {
-        location.href = "https://zzedovec.github.io/pages/zedweather";}
+        location.href = "https://zzedovec.github.io/pages/ZeDWeather";}
       document.getElementById("button4").onclick = function () {
         location.href = "https://zzedovec.github.io/pages/media";}
       document.getElementById("button5").onclick = function () {
