--- a/pages/ZeDWeather.html
+++ b/pages/ZeDWeather.html
@@ -4,9 +4,8 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" type="text/css"
       href="https://zzedovec.github.io/css/dark.css">
-    <link rel="icon" href="https://zzedovec.github.io/icons/ze.ico"
-      type="image/x-icon">
-    <title>ZeD Shot - программа для скриншотов</title>
+    <link rel="icon" href="https://zzedovec.github.io/icons/zedweathericon.png" type="image/x-icon">
+    <title>ZeD Weather - программа для скриншотов</title>
   </head>
   <body vlink="#551A8B" text="#000000" link="#0000EE" bgcolor="#333333"
     alink="#EE0000">
