--- a/pages/ZeDWeather.html
+++ b/pages/ZeDWeather.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css"
       href="https://zzedovec.github.io/css/dark.css">
     <link rel="icon" href="https://zzedovec.github.io/icons/zedweathericon.png" type="image/x-icon">
-    <title>ZeD Weather - программа для скриншотов</title>
+    <title>ZeD Weather - смотреть погоду за окном стало проще</title>
   </head>
   <body vlink="#551A8B" text="#000000" link="#0000EE" bgcolor="#333333"
     alink="#EE0000">
