--- a/pages/ZeDShot.html
+++ b/pages/ZeDShot.html
@@ -4,7 +4,7 @@
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
     <link rel="stylesheet" type="text/css" href="https://zzedovec.github.io/css/dark.css">
     <link rel="icon" href="https://zzedovec.github.io/icons/ze.ico" type="image/x-icon">
-    <title>ZeD Shot - программа для скриншотов</title>
+    <title>ZeD Shot</title>
   </head>
   <body link="#0000EE" vlink="#551A8B" text="#000000" bgcolor="#333333"
     alink="#EE0000">
