--- a/pages/ZeDShot.html
+++ b/pages/ZeDShot.html
@@ -18,7 +18,8 @@
         <h2 class="header2" align="center">- многофункциональная
           программа для скриншотов, позволяющая вам делать больше, чем
           вы думаете.</h2>
-        <button type="button" class="button" id="button1">Загрузить для Windows</button><br><br>
+        <button type="button" class="button" id="button1">Загрузить для Windows</button><br>
+        <font size="-2"><p class="header2">как минимум Windows Vista SP2</p></font><br>
         <button type="button" class="button" id="button2">Что умеет ZeD Shot</button><br>
         <button type="button" class="button" id="button3">Защита данных</button><br>
         <button type="button" class="button" id="button4">Сообщество</button><br>
