--- a/index.html
+++ b/index.html
@@ -14,8 +14,9 @@
       <button type="button" class="button" id="button1">ZeD Shot </button>
       <button type="button" class="button" id="button2">ZeAnalytics</button>
       <button type="button" class="button" id="button3">ZeD Weather</button>
-      <button type="button" class="button" id="button4">Медиа</button>
-      <button type="button" class="button" id="button5">Репозиторий сайта на GitHub</button>
+      <button type="button" class="button" id="button4">Kella Corners</button>
+      <button type="button" class="button" id="button5">Медиа</button>
+      <button type="button" class="button" id="button6">Репозиторий сайта на GitHub</button>
     </div>
     <script>
       var currenttheme = localStorage.getItem('Theme');
@@ -62,8 +63,10 @@
       document.getElementById("button3").onclick = function () {
         location.href = "https://zzedovec.github.io/pages/ZeDWeather";}
       document.getElementById("button4").onclick = function () {
-        location.href = "https://zzedovec.github.io/pages/media";}
+        location.href = "https://zzedovec.github.io/pages/KellaCorners";}
       document.getElementById("button5").onclick = function () {
+        location.href = "https://zzedovec.github.io/pages/media";}
+      document.getElementById("button6").onclick = function () {
         location.href = "https://github.com/ZzEdovec/zzedovec.github.io";}
     </script>
   </body>
