--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html>
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>ZzEdovec</title>
+    <title>queinu</title>
     <link rel="stylesheet" type="text/css" href="css/dark.css"/>
     <link type="image/png" sizes="16x16" rel="icon" href="icons/mainpage.png">
   </head>
   <body link="#0000EE" vlink="#551A8B" text="#000000" bgcolor="#333333" alink="#EE0000">
     <button type="button" align="center" class="button" id="lighttheme">Использовать светлую тему</button>
-    <h1 align="center" class="header1"><font face="Arial">Вы на главной странице сайта ZzEdovec.</font></h1><br>
-    <h2 align="center" class="header2"><font face="Arial">Здесь вы можете перейти на некоторые страницы.</font></h2>
+    <h1 align="center" class="header1"><font face="Arial">Вы на главной странице сайта queinu.</font></h1><br>
+    <h2 align="center" class="header2"><font face="Arial">Выберите страницу, на которую вы хотите перейти.</font></h2>
     <div align="center">
       <button type="button" class="button" id="button1">ZeD Shot </button>
       <button type="button" class="button" id="button2">ZeAnalytics</button>
