--- a/pages/media.html
+++ b/pages/media.html
@@ -3,7 +3,7 @@
   <head>
     <link type="image/png" sizes="16x16" rel="icon" href="https://zzedovec.github.io/icons/mediaicon.png">
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>ZzEdovec - связаться</title>
+    <title>queinu - связаться</title>
   </head>
   <body link="#0000EE" vlink="#551A8B" text="#000000" bgcolor="#1a1a1a"
     alink="#EE0000">
@@ -14,7 +14,7 @@ src="https://zzedovec.github.io/images/backtomain.png"
             alt="Вернуться на главную страницу" width="200" border="0"
             height="50"></a></div>
       <h1><font color="#ffffff" face="Arial">Связаться с ZzEdovec</font></h1>
-      <a href="https://vk.me/zzedovec"><img moz-do-not-send="true"
+      <a href="https://vk.me/queinu"><img moz-do-not-send="true"
           src="https://zzedovec.github.io/images/vkbutton.png"
           alt="Страница ZzEdovec во ВКонтакте" width="300" border="0"
           height="100"></a><br>
@@ -23,7 +23,7 @@ src="https://zzedovec.github.io/images/backtomain.png"
       <font face="Arial"> </font>
       <p><font size="+1"><font color="#cccccc"><font face="Arial">Discord:
 
-              ZzEdovec#4544<br>
+              queinu#4544<br>
               Email: zzedovec@yahoo.com</font><br>
           </font></font></p>
     </div>
