фикс 'это' index.html

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 		</nav>
 	</header>
     <main>
-        <h2>это главная страница сайта queinu</h2>
+        <h2>Это главная страница сайта queinu.</h2>
         <p>Добро пожаловать в мой второй дом! Меня зовут Даня, а мой творческий псевдоним - queinu. На этом сайте представлены мои приложения с графическим интерфейсом. Они призваны упростить работу за компьютером и обеспечить наилучший пользовательский опыт. Просто нажмите на название проекта в шапке страницы.
         </p>
         </main>
