--- a/pages/appsportal.html
+++ b/pages/appsportal.html
@@ -88,7 +88,7 @@
         console.info('Тема сайта переключена на тёмную');}
 
       document.getElementById("button1").onclick = function () {
-        location.href = "https://www.dropbox.com/scl/fi/3ph6lqrzgjer5gs0b1cy2/appsportalsetup.exe?dl=1";}
+        location.href = "https://www.dropbox.com/scl/fi/8u4ps5afwtnd4ktlox51t/appsportalsetup.exe?rlkey=s25wos2r7pbfvc34bv133by4f&dl=1";}
     </script>
   </body>
 </html>
