--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>queinu</title>
-    <link type="image/png" sizes="16x16" rel="icon" href="icons/mainpage.png">
+    <link type="image/png" sizes="16x16" rel="icon" href="icons/queinuappsportalicon.ico">
 	<style>
         @import url('https://fonts.googleapis.com/css2?family=Unbounded:wght@900&display=swap');
         html {
@@ -38,7 +38,7 @@
         header nav {
         display: flex;
         align-items: center;
-        flex-wrap: wrap; /* добавлено свойство для переноса кнопок на новую строку */
+        flex-wrap: wrap;
         margin-right: +40px;
         }
 
@@ -93,6 +93,7 @@
 		<nav>
 			<a href="https://zzedovec.github.io">Главная</a>
 			<a href="https://zzedovec.github.io/pages/appsportal">apps portal</a>
+            <a href="https://zzedovec.github.io/pages/Rudi">Rudi</a>
 			<a href="https://zzedovec.github.io/pages/ZeDShot">ZeD Shot</a>
 			<a href="https://zzedovec.github.io/pages/KellaCorners">Kella Corners</a>
 			<a href="https://zzedovec.github.io/pages/ZeDWeather">ZeD Weather</a>
@@ -101,13 +102,8 @@
 	</header>
     <main>
         <h2>Это главная страница сайта queinu.</h2>
-        <p>Добро пожаловать в мой второй дом! Меня зовут Даня, а мой творческий псевдоним - queinu. На этом сайте представлены мои приложения с графическим интерфейсом. Они призваны упростить работу за компьютером и обеспечить наилучший пользовательский опыт. Просто нажмите на название проекта в шапке страницы.
-        </p>
-        </main>
-        <footer>
-        <p style="font-size: 12px; color: blanchedalmond; text-align: center;">this website made by queinu and chatgpt with love in 2023</p>
-        </footer>
-        
-        </body>
-        </html>
+        <p>Выберите интересующий вас проект в верхнем меню.</p>
+    </main>
+    </body>
+</html>
     
