--- a/resources/rudi/player/player.html
+++ b/resources/rudi/player/player.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>YouTube Player</title>
+    <title>Rudi YouTube Player</title>
     <style>
         body, html {
             height: 100%;
@@ -40,16 +40,16 @@
 
         function onPlayerStateChange(event) {
             if (event.data == YT.PlayerState.PLAYING) {
-                sendEventToBridge('play');
+                window.phpBridge.play();
             } else if (event.data == YT.PlayerState.PAUSED) {
-                sendEventToBridge('pause');
+                window.phpBridge.pause();
             } else if (event.data == YT.PlayerState.ENDED) {
-                sendEventToBridge('end');
+                window.phpBridge.end();
             }
         }
 
         function sendEventToBridge(event) {
-            window.parent.postMessage({event: event}, '*');
+            window.phpBridge.pause();
         }
 
         window.addEventListener('message', function(event) {
