--- a/resources/rudi/player/main.html
+++ b/resources/rudi/player/main.html
@@ -8,7 +8,7 @@
     <script>
         const urlParams = new URLSearchParams(window.location.search);
         const videoId = urlParams.get('id');
-        const iframeSrc = `path/to/your/player.html?id=${videoId}`;
+        const iframeSrc = `player.html?id=${videoId}`;
     </script>
 
     <iframe id="youtubePlayer" src="" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
