--- a/resources/rudi/player/player.html
+++ b/resources/rudi/player/player.html
@@ -43,12 +43,17 @@
 
         function pause()
         {
-            player.playVideo();
+            player.pauseVideo();
         }
 
         function seekTo(seconds)
         {
             player.seekTo(seconds);
+        }
+
+        function load(id)
+        {
+            player.loadVideoById(id);
         }
 
         /*function onPlayerReady(event) {
