--- a/resources/rudi/player/player.html
+++ b/resources/rudi/player/player.html
@@ -56,6 +56,11 @@
             player.loadVideoById(id);
         }
 
+        function getPlayerState()
+        {
+            return player.getPlayerState();
+        }
+
         /*function onPlayerReady(event) {
             setInterval(function() {
                 let currentTime = player.getCurrentTime();
