--- a/resources/rudi/player/player.html
+++ b/resources/rudi/player/player.html
@@ -36,7 +36,7 @@
             });
         }
         
-        function pause()
+        function play()
         {
             player.playVideo();
         }
